# soft

./: Cargo.toml  README.md  STANDARD.md  build.soft  rustfmt.toml  stdlib.soft
.github/workflows/: ci.yml  test.yml
crates/soft-cli/: Cargo.toml
crates/soft-cli/src/: main.rs
crates/soft-compiler/: Cargo.toml
crates/soft-compiler/src/: expr.rs  lib.rs  location.rs  parser.rs  syntax.rs
crates/soft-compiler/src/backend/: mod.rs
crates/soft-compiler/src/backend/llvm/: codegen.rs  macros.rs  mod.rs  runtime.rs  term.rs
crates/soft-compiler/src/codegen/: mod.rs
crates/soft-compiler/src/cranelift/: mod.rs
crates/soft-compiler/src/llvm/: di.rs  macros.rs  mod.rs  runtime.rs  term.rs
crates/soft-compiler/src/mir/: mod.rs  stmt.rs
crates/soft-compiler/src/parser/: mod.rs  syntax.rs  tracker.rs
crates/soft-compiler/src/spec/: mod.rs  tree.rs
crates/soft-compiler/src/specialize/: closure.rs  free.rs  mod.rs  substitute.rs  tree.rs
crates/soft-runtime/: Cargo.toml
crates/soft-runtime/src/: allocator.rs  internal.rs  lib.rs  ptr.rs  tag.rs  value.rs
crates/soft-runtime/src/value/: display.rs  freeable.rs  mod.rs  pointer.rs  tagged.rs
examples/: FIB.lisp  fib.lisp  test.lisp
soft/: build.lsp  stdlib.lsp
soft-compiler/: main.lisp
soft-interpreter/: Cargo.toml
soft-interpreter/src/: environment.rs  error.rs  eval.rs  expand.rs  intrinsics.rs  lib.rs  main.rs  reader.rs  value.rs
soft-interpreter/src/intrinsics/: cmp.rs  env.rs  ffi.rs  hashmap.rs  io.rs  list.rs  match_.rs  num.rs  rt.rs  string.rs  unwind.rs  vec.rs
soft-stdlib/: fib.lisp  list.lisp  macros.lisp  mian.lisp  repl.lisp  stdlib.lisp  test.lisp
soft-stdlib/mian/: hello_world.lisp
soft-suite/: fib.expect  fib.lisp  macro_print.expect  macro_print.lisp  quote.expect  quote.lisp
soft-suite/bindings/: test.c  test.lisp
soft-tests/: Cargo.toml
soft-tests/src/: lib.rs
soft-tests/tests/: suite.rs
softc/: Cargo.toml
softc/src/: codegen.rs  ffi.rs  lib.rs  main.rs  pprint.rs  runtime.rs  semantic.rs
src/: allocator.rs  cli.rs  closure.rs  codegen.rs  conversion.rs  eval.rs  interpreter.rs  lib.rs  macros.rs  main.rs  parser.rs  repl.rs  runtime.rs  semantic.rs  soft.lalrpop  spaced.rs  specialized.rs  util.rs
src/codegen/: builder.rs  compile.rs  execution.rs  helpers.rs  jit.rs  term.rs  types.rs
src/codegen/helpers/: builder.rs  context.rs  module.rs  types.rs
src/runtime/: primitives.rs
src/runtime/primitives/: closure.rs  fun.rs  global.rs  value.rs
stdlib/: fib.lisp  list.lisp  macros.lisp  repl.lisp  stdlib.lisp
