[package]
name = "softc"
edition.workspace = true
authors.workspace = true
documentation.workspace = true
version.workspace = true

[dependencies]
bupropion = "0.0.18"
clap = {version = "4.4.7", features = ["derive"]}
cranelift = "0.101.4"
cranelift-jit = "0.101.4"
cranelift-module = "0.101.4"
cranelift-native = "0.101.4"
eyre = "0.6.8"
libc = "0.2.149"
miette = "5.10.0"
rustyline = {version = "12.0.0", features = ["derive"]}
thiserror = "1.0.50"
