[package]
edition = "2021"
name = "soft-compiler"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cranelift = "0.96.3"
cranelift-jit = "0.96.3"
cranelift-module = "0.96.3"
cranelift-native = "0.96.3"
fxhash = "0.2.1"
im-rc = "15.1.0"
inkwell = {git = "https://github.com/TheDan64/inkwell", branch = "master", features = ["llvm16-0"]}
itertools = "0.10.5"
libc = "0.2.139"
llvm-sys = "160.1.0"
soft-runtime = {path = "../soft-runtime"}
thiserror = "1.0.40"
